--- a/NoobTodo.Teste/NoobTodo.Teste.csproj
+++ b/NoobTodo.Teste/NoobTodo.Teste.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NoobTodo\NoobTodo.csproj" />
+  </ItemGroup>
+
 </Project>
