--- a/NoobTodo.Api/appsettings.json
+++ b/NoobTodo.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TodoConnection": "server=localhost;database=todo_db;user=root;password=root"
+  }
 }
