feat: Adicion connection string

--- a/NoobTodo.Api/appsettings.Development.json
+++ b/NoobTodo.Api/appsettings.Development.json
@@ -3,6 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ConnectionStrings": {
+      "TodoConnection": "server=localhost;database=todo_db;user=root;password=root"
     }
   }
 }
