--- a/NoobTodo.Api/NoobTodo.Api.csproj
+++ b/NoobTodo.Api/NoobTodo.Api.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\NoobTodo\NoobTodo.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
